Cite neuroscientists on tuning curves

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -68,7 +68,7 @@
         <b>Dataset examples</b> show us where the neuron fires in practice.
       </li>
       <li>
-        <b>Synthetic tuning curves</b> show us how variation affects the neuron's response.
+        <b>Synthetic tuning curves</b> show us how variation affects the neuron's response.<d-cite bibtex-key="pasupathy2001shape"></d-cite><d-cite bibtex-key="jiang2019discrete"></d-cite>
       </li>
     </ul>
 
