Fix typo in Imagenet citation

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -193,7 +193,7 @@
       </div>
       <figcaption class="figcaption">
         <a href="#1.2.0-dataset-examples" class="figure-number">2</a>:
-        Crops taken from Imagenet<d-cite bibtex-key="imagenet5206848R"></d-cite> where <a href="https://microscope.openai.com/models/inceptionv1/mixed3a_0/136"><code>mixed3a</code> 136</a> activated maximally,
+        Crops taken from Imagenet<d-cite bibtex-key="imagenet5206848"></d-cite> where <a href="https://microscope.openai.com/models/inceptionv1/mixed3a_0/136"><code>mixed3a</code> 136</a> activated maximally,
         argmaxed over spatial locations.
       </figcaption>
     </figure>
