Cite Nguyen et al 2016 (multifaceted feature visualization)

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -62,7 +62,7 @@
     </p>
     <ul>
       <li>
-        <b>Feature visualization</b> allows us to establish a causal link between each neuron and its function.<d-cite bibtex-key="yosinski2015understanding"></d-cite><d-cite bibtex-key="olah2017feature"></d-cite>
+        <b>Feature visualization</b> allows us to establish a causal link between each neuron and its function.<d-cite bibtex-key="yosinski2015understanding"></d-cite><d-cite bibtex-key="nguyen2016multifaceted"></d-cite><d-cite bibtex-key="olah2017feature"></d-cite>
       </li>
       <li>
         <b>Dataset examples</b> show us where the neuron fires in practice.
