Cite Karpathy's early 'Visualizing and understanding recurrent networks' paper

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -501,7 +501,7 @@
 
     <h2>Conclusion</h2>
 
-    <p>Although high-low frequency detectors represent a feature that we didn't necessarily expect to find in a neural network, we find that we can still explore and understand them using the interpretability tools we've built up for exploring <a href="https://distill.pub/2020/circuits/zoom-in/">circuits</a>: NMF, feature visualization, synthetic stimuli, and more.
+    <p>Although high-low frequency detectors represent a feature that we didn't necessarily expect to find in a neural network, we find that we can still explore and understand<d-cite bibtex-key="karpathy2015visualizing"></d-cite> them using the interpretability tools we've built up for exploring <a href="https://distill.pub/2020/circuits/zoom-in/">circuits</a>: NMF, feature visualization, synthetic stimuli, and more.
 
     <p>We've also learned that high-low frequency detectors are an important part of later, higher-level features, are built up from comprehensible lower-level parts, and are common across multiple network architectures.
     </p>
