Implement feedback for Figure 4
The feedback: "move fv between weights, so arrows signify signal flow
through weights. Pay attention to keep weights aligned; try multiple arrows."

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -265,10 +265,12 @@
 
     <d-figure id="figure-4">
       <figure >
-        <img src="diagrams/mixed3a-110-topk-weight-structure.png" style="width: 100%; max-width: 429px; margin-bottom: 20px;">
+        <%= require('../static/diagrams/figure-4.svg') %>
         <figcaption id="figure-4-caption">
             <a href="#figure-4" class="figure-number">4</a>:
-            Eight neurons from conv2d2 contributing weights to mixed3a 110. Neurons in the top row <span class="legend-label support-rb">activate</span> on the left and <span class="legend-label inhibit-rb">inhibit</span> on the right; neurons in the bottom row <span class="legend-label inhibit-rb">inhibit</span> on the left and <span class="legend-label support-rb">activate</span> on the right.
+            Six neurons from conv2d2 contributing weights to mixed3a 110.
+
+            <!--Neurons in the top row <span class="legend-label support-rb">activate</span> on the left and <span class="legend-label inhibit-rb">inhibit</span> on the right; neurons in the bottom row <span class="legend-label inhibit-rb">inhibit</span> on the left and <span class="legend-label support-rb">activate</span> on the right.-->
         </figcaption>
       </figure>
     </d-figure>
