Fix font-weight on this diagram's citations to be normal

--- a/src/diagrams/similar-directions.ejs
+++ b/src/diagrams/similar-directions.ejs
@@ -1,6 +1,11 @@
 <% models = require("../../static/diagrams/4.1-similar-directions/similar-directions.json").models%>
 
 <style>
+
+    strong d-cite {
+      font-weight: normal;
+    }
+
     figure.columns {
         display: grid;
         grid-gap: 0.5em;
