Wordsmith this paragraph slightly

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -279,7 +279,7 @@
     </d-figure>
 
     <p>
-      The same holds for the other high-low frequency detectors&mdash;but with different spatial patterns on the weights, because they each have different orientations.
+      The same also holds for each of the other high-low frequency detectors&mdash;but with different spatial patterns on the weights, implementing the different orientations.
     </p>
 
     <p>
