Revert title to High-Low Frequency Detectors
Per our meeting with Chris a month and a half ago, Chris prefers this
title remain High-Low Frequency Detectors, but notes that we can
mention the alternative possible name Spatial Frequency Contrast
Detectors in an aside.

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -26,7 +26,7 @@
   </style>
 
   <d-title>
-    <h1>Spatial Frequency Contrast Detectors</h1>
+    <h1>High-Low Frequency Detectors</h1>
     <p>A family of early-vision neurons reacting to adjacent, sinusoidally-modulated gratings of different spatial frequencies.</p>
     <figure id="hero" class="l-body">
       <img src="images/high-low-hero.png"/>
