Add footnote mentioning Sobel filter

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -272,7 +272,7 @@
         <%= require('../static/diagrams/figure-4.svg') %>
         <figcaption id="figure-4-caption">
             <a href="#figure-4" class="figure-number">4</a>:
-            Six neurons from conv2d2 contributing weights to mixed3a 110.
+            Six neurons from conv2d2 contributing weights<d-footnote>As an aside: The 1-2-1 pattern on each column of weights is curiously reminiscent of the structure of the <a href="https://en.wikipedia.org/wiki/Sobel_operator">Sobel filter</a>.</d-footnote> to mixed3a 110.
 
             <!--Neurons in the top row <span class="legend-label support-rb">activate</span> on the left and <span class="legend-label inhibit-rb">inhibit</span> on the right; neurons in the bottom row <span class="legend-label inhibit-rb">inhibit</span> on the left and <span class="legend-label support-rb">activate</span> on the right.-->
         </figcaption>
