Adjust tuning curve citation

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -207,7 +207,7 @@
     </a>
 
     <p>
-      Originally a technique of neuroscience research<d-cite bibtex-key="pmid16993807"></d-cite>, <b>tuning curves</b> measure neural response to a continuous stimulus parameter.
+      Originally a technique of neuroscience research<d-cite bibtex-key="hubel1962receptive"></d-cite>, <b>tuning curves</b> measure neural response to a continuous stimulus parameter.
       If high-low frequency detectors are sensitive to orientation, we should expect to be able to demonstrate this via a tuning curve over different orientations, similar to what we showed for <a href="https://distill.pub/2020/circuits/curve-detectors/#radial-tuning-curve">curve detectors</a>.
     </p>
 
