Fix nit: the opposite of inhibition is excitation, not activation

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -421,7 +421,7 @@
         <p>
           <a href="#figure-11" class="figure-number">11</a>:
           Some of <a href="https://storage.googleapis.com/distill-circuits/inceptionv1-weight-explorer/mixed3b_314.html"><code>mixed3b</code> 314</a>'s weights, extracted for emphasis. Orientation doesn't matter so much for how these weights are used by <a href="https://storage.googleapis.com/distill-circuits/inceptionv1-weight-explorer/mixed3b_314.html"><code>mixed3b</code> 314</a>, but their 180º-invariant orientation does!</p>
-        <p>Strong <span class="legend-label support-rb">activation</span> (left) indicates the presence of a <b>boundary</b> at a particular angle, whereas strong <span class="legend-label inhibit-rb">inhibition</span> (right) indicates <b>object continuity</b> where a boundary might otherwise have been.</p>
+        <p>You may notice that strong <span class="legend-label support-rb">excitation</span> (left) is correlated with the presence of a <b>boundary</b> at a particular angle, whereas strong <span class="legend-label inhibit-rb">inhibition</span> (right) is correlated with <b>object continuity</b> where a boundary might otherwise have been.</p>
       </figcaption>
       </figure>
     </d-figure>
